<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/iconown"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mufasa.browser_10.MainActivity">

    <Button
        android:text="@string/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp"
        android:id="@+id/btnSearch" />

    <EditText
        android:hint="@string/txtUrlHint"
        android:textColorHint="@color/colorAccent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:id="@+id/txtUrl" />

    <TextView
        android:text="@string/txtLabel"
        android:textColor="@color/colorAccent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:text="@string/btnFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnFb" />

    <Button
        android:text="@string/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGoogle"
        android:layout_below="@+id/btnFb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <Button
        android:text="@string/btnYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnYoutube"
        android:layout_below="@+id/btnGoogle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <Button
        android:text="@string/btnDailyNation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNews"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_alignBaseline="@+id/btnFb"
        android:layout_alignBottom="@+id/btnFb"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:text="@string/btnJumia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnJumia"
        android:layout_alignBaseline="@+id/btnGoogle"
        android:layout_alignBottom="@+id/btnGoogle"
        android:layout_alignLeft="@+id/btnNews"
        android:layout_alignStart="@+id/btnNews" />

    <Button
        android:text="@string/btnSaf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaf"
        android:layout_alignBaseline="@+id/btnYoutube"
        android:layout_alignBottom="@+id/btnYoutube"
        android:layout_alignLeft="@+id/btnJumia"
        android:layout_alignStart="@+id/btnJumia" />
</RelativeLayout>
